--- a/static/css/pk-common.css
+++ b/static/css/pk-common.css
@@ -426,7 +426,7 @@
 .user-bar span {
     font-size: 14px;
     background: rgba(255,255,255,0.9);
-    padding: 6px 12px;
+    /*padding: 6px 12px;*/
     border-radius: 20px;
 }
 
